--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ display: block;
 body {
 margin: 0;
 font-family: Arial, sans-serif;
-background: url('https://raw.githubusercontent.com/Crowbar0/Chonkus/main/images/13.jpg') no-repeat center center fixed;
+background: url('https://raw.githubusercontent.com/Crowbar0/Chonkus/main/New Chonkus Banner.jpg') no-repeat center center fixed;
 background-size: cover;
 color: #003366;
 display: flex;
