--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ text-align: center;
 
 <div class="map-container">
 <iframe
-src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3247.4966131998663!2d24.00646987716682!3d35.5167235389911!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x149c7da24f4af6e9%3A0x2049dce44f870536!2sAkti%20Kanari%205%2C%20Chania%20731%2031%2C%20Greece!5e0!3m2!1sen!2sau!4v1753055481857!5m2!1sen!2sau"
+src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3247.431432327543!2d24.010554077166802!3d35.518334738903015!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x149c7d0048d3586f%3A0x89871740f5a34d69!2sChonkus%20Maximus!5e0!3m2!1sen!2sau!4v1753230990621!5m2!1sen!2sau"
 allowfullscreen=""
 loading="lazy"
 referrerpolicy="no-referrer-when-downgrade">
@@ -330,7 +330,7 @@ Mobyscreener *BUY $CHONKUS!*
 TikTok (10m views & counting!)
 </a>
 
-<a class="button" href="https://maps.app.goo.gl/qiykGBqUQPeET4vr8">
+<a class="button" href="https://maps.app.goo.gl/MJu6XRUe7XReyPQ88">
 <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/googlemaps.svg" alt="Google Maps" class="icon" />
 View Location (on Google Maps)
 </a>
