--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@ title="Chonkus Maximus on YouTube"
 </section>
 
 <footer>
-&copy; 2025 Your Community. All rights reserved.
+&copy; 2025 Chonkus Maximus Community. All rights reserved.
 </footer>
 </div>
 
