--- a/index.html
+++ b/index.html
@@ -334,6 +334,11 @@ TikTok (10m views & counting!)
 <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/googlemaps.svg" alt="Google Maps" class="icon" />
 View Location (on Google Maps)
 </a>
+
+<a class="button" href="https://www.coingecko.com/en/coins/chonkus-maximus">
+<img src="https://www.coingecko.com/en/coins/chonkus-maximus" alt="Coingecko" class="icon" />
+Find us on Coingecko!
+</a>
 </section>
 
 <section style="max-width: 700px; margin: 40px auto; background: #f9f5e7; padding: 20px; border-radius: 12px; box-shadow: 0 0 10px rgba(0,0,0,0.1); color: #333;">
