--- a/index.html
+++ b/index.html
@@ -335,10 +335,12 @@ TikTok (10m views & counting!)
 View Location (on Google Maps)
 </a>
 
-<a class="button" href="https://www.coingecko.com/en/coins/chonkus-maximus">
-<img src="https://www.coingecko.com/en/coins/chonkus-maximus" alt="Coingecko" class="icon" />
-Find us on Coingecko!
+<a href="https://www.coingecko.com/en/coins/chonkus-maximus" target="_blank" rel="noopener noreferrer">
+  <img src="https://cdn.jsdelivr.net/gh/simplr-sh/coin-logos/images/coingecko/standard.png" 
+       alt="View on CoinGecko" 
+       style="height:40px; vertical-align:middle;">
 </a>
+
 </section>
 
 <section style="max-width: 700px; margin: 40px auto; background: #f9f5e7; padding: 20px; border-radius: 12px; box-shadow: 0 0 10px rgba(0,0,0,0.1); color: #333;">
