--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@ View Location (on Google Maps)
 </a>
 
 <a class="button" href="https://www.coingecko.com/en/coins/chonkus-maximus" target="_blank" rel="noopener noreferrer">
-  <img src="https://cdn.jsdelivr.net/gh/simplr-sh/coin-logos/images/coingecko/standard.png" alt="CoinGecko" class="icon" />
+  <img src="https://raw.githubusercontent.com/Crowbar0/Chonkus/main/CoinGecko.png" alt="CoinGecko" class="icon" />
   View on CoinGecko
 </a>
 </section>
