--- a/index.html
+++ b/index.html
@@ -257,7 +257,8 @@ font-size: 1.1rem;
 color: #003366;
 text-align: center;
 }
-
+  </style>
+</style>
 .scroll-link {
   display: inline-block;
   padding: 8px 16px;
