--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@ fortuneText.textContent = fortunes[randomIndex];
   const ctx = canvas.getContext('2d');
 
   const overlay = new Image();
-  overlay.src = 'wreath.png'; // Path to your laurel wreath PNG
+  overlay.src = 'https://raw.githubusercontent.com/Crowbar0/Chonkus/main/Wreath.png'; 
 
   upload.addEventListener('change', (e) => {
     const reader = new FileReader();
