--- a/index.html
+++ b/index.html
@@ -305,10 +305,10 @@ referrerpolicy="no-referrer-when-downgrade">
 </iframe>
 </div>
 
-  <section id="pfp-generator" style="text-align:center; margin: 40px auto;">
-  <h2>🏛️ Chonkus Laurel Wreath PFP Generator</h2>
-  <input type="file" id="upload" accept="image/*"><br><br>
-  <canvas id="canvas" width="500" height="500"></canvas><br><br>
+<section id="pfp-generator" style="text-align:center; margin: 40px auto;">
+  <h2>🎨 Chonkus Laurel Wreath PFP Generator</h2>
+  <input type="file" id="upload" accept="image/*"><br>
+  <canvas id="canvas" width="500" height="500"></canvas><br>
   <button onclick="downloadImage()">Download Your PFP</button>
 </section>
 
@@ -657,40 +657,74 @@ fortuneText.textContent = fortunes[randomIndex];
 </script>
 
   <script>
-  const upload = document.getElementById('upload');
-  const canvas = document.getElementById('canvas');
-  const ctx = canvas.getContext('2d');
+    const canvas = document.getElementById('canvas');
+    const ctx = canvas.getContext('2d');
+    const upload = document.getElementById('upload');
 
-  const overlay = new Image();
-  overlay.src = 'https://raw.githubusercontent.com/Crowbar0/Chonkus/main/Wreath.png'; 
+    const wreath = new Image();
+    wreath.src = 'wreath.png'; // Adjust path as needed
 
-  upload.addEventListener('change', (e) => {
-    const reader = new FileReader();
-    reader.onload = function(event) {
-      const img = new Image();
-      img.onload = function() {
-        ctx.clearRect(0, 0, canvas.width, canvas.height);
-        ctx.drawImage(img, 0, 0, canvas.width, canvas.height);
-        if (overlay.complete) {
-          ctx.drawImage(overlay, 0, 0, canvas.width, canvas.height);
-        } else {
-          overlay.onload = () => {
-            ctx.drawImage(overlay, 0, 0, canvas.width, canvas.height);
-          };
-        }
+    let pfpImage = null;
+    let wreathX = 0;
+    let wreathY = 0;
+    let dragging = false;
+    let offsetX = 0;
+    let offsetY = 0;
+
+    function drawCanvas() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      if (pfpImage) {
+        ctx.drawImage(pfpImage, 0, 0, canvas.width, canvas.height);
+      }
+      ctx.drawImage(wreath, wreathX, wreathY, canvas.width, canvas.height);
+    }
+
+    upload.addEventListener('change', (e) => {
+      const reader = new FileReader();
+      reader.onload = function(event) {
+        const img = new Image();
+        img.onload = function() {
+          pfpImage = img;
+          drawCanvas();
+        };
+        img.src = event.target.result;
       };
-      img.src = event.target.result;
-    };
-    reader.readAsDataURL(e.target.files[0]);
-  });
+      reader.readAsDataURL(e.target.files[0]);
+    });
 
-  function downloadImage() {
-    const link = document.createElement('a');
-    link.download = 'chonkus_pfp.png';
-    link.href = canvas.toDataURL();
-    link.click();
-  }
-</script>
+    // Drag handling
+    canvas.addEventListener('mousedown', (e) => {
+      const rect = canvas.getBoundingClientRect();
+      const x = e.clientX - rect.left;
+      const y = e.clientY - rect.top;
+
+      if (x >= wreathX && x <= wreathX + canvas.width &&
+          y >= wreathY && y <= wreathY + canvas.height) {
+        dragging = true;
+        offsetX = x - wreathX;
+        offsetY = y - wreathY;
+      }
+    });
+
+    canvas.addEventListener('mousemove', (e) => {
+      if (dragging) {
+        const rect = canvas.getBoundingClientRect();
+        wreathX = e.clientX - rect.left - offsetX;
+        wreathY = e.clientY - rect.top - offsetY;
+        drawCanvas();
+      }
+    });
+
+    canvas.addEventListener('mouseup', () => dragging = false);
+    canvas.addEventListener('mouseleave', () => dragging = false);
+
+    function downloadImage() {
+      const link = document.createElement('a');
+      link.download = 'chonkus_pfp.png';
+      link.href = canvas.toDataURL();
+      link.click();
+    }
+  </script>
 
 
 </body>
