--- a/index.html
+++ b/index.html
@@ -328,12 +328,16 @@ referrerpolicy="no-referrer-when-downgrade">
 
 <section id="pfp-generator" style="text-align:center; margin: 40px auto;">
   <h2>🎨 Chonkus Laurel Wreath PFP Generator</h2>
- <label for="upload" class="custom-file-upload">
-  📁 Upload Your Profile Picture
-</label>
-<input type="file" id="upload" accept="image/*" />
- id="upload" accept="image/*"><br>
-  <canvas id="canvas" width="500" height="500"></canvas><br>
+
+  <label for="upload" class="custom-file-upload">
+    📁 Upload Your Profile Picture
+  </label>
+  <input type="file" id="upload" accept="image/*" />
+
+  <br><br>
+  <canvas id="canvas" width="500" height="500"></canvas>
+  <br><br>
+
   <button onclick="downloadImage()">Download Your PFP</button>
 </section>
 
