--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@ fortuneText.textContent = fortunes[randomIndex];
     const upload = document.getElementById('upload');
 
     const wreath = new Image();
-    wreath.src = 'wreath.png'; // Adjust path as needed
+    wreath.src = 'https://raw.githubusercontent.com/Crowbar0/Chonkus/main/wreath.png';
 
     let pfpImage = null;
     let wreathX = 0;
