--- a/index.html
+++ b/index.html
@@ -686,75 +686,47 @@ fortuneText.textContent = fortunes[randomIndex];
 </script>
 
   <script>
-    const canvas = document.getElementById('canvas');
-    const ctx = canvas.getContext('2d');
-    const upload = document.getElementById('upload');
+  const canvas = document.getElementById('canvas');
+  const ctx = canvas.getContext('2d');
+  const upload = document.getElementById('upload');
 
-    const wreath = new Image();
-    wreath.src = 'https://raw.githubusercontent.com/Crowbar0/Chonkus/main/Wreath.png';
+  const wreath = new Image();
+  wreath.src = 'wreath.png'; // Make sure this path is correct
 
-    let pfpImage = null;
-    let wreathX = 0;
-    let wreathY = 0;
-    let dragging = false;
-    let offsetX = 0;
-    let offsetY = 0;
+  let pfpImage = null;
+  let wreathX = 0;
+  let wreathY = 0;
+  let dragging = false;
+  let offsetX = 0;
+  let offsetY = 0;
 
-    function drawCanvas() {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-      if (pfpImage) {
-        ctx.drawImage(pfpImage, 0, 0, canvas.width, canvas.height);
-      }
+  function drawCanvas() {
+    ctx.clearRect(0, 0, canvas.width, canvas.height);
+    if (pfpImage) {
+      ctx.drawImage(pfpImage, 0, 0, canvas.width, canvas.height);
+    }
+    if (wreath.complete) {
       ctx.drawImage(wreath, wreathX, wreathY, canvas.width, canvas.height);
     }
+  }
 
-    upload.addEventListener('change', (e) => {
-      const reader = new FileReader();
-      reader.onload = function(event) {
-        const img = new Image();
-        img.onload = function() {
-          pfpImage = img;
-          drawCanvas();
-        };
-        img.src = event.target.result;
-      };
-      reader.readAsDataURL(e.target.files[0]);
-    });
-
-    // Drag handling
-    canvas.addEventListener('mousedown', (e) => {
-      const rect = canvas.getBoundingClientRect();
-      const x = e.clientX - rect.left;
-      const y = e.clientY - rect.top;
-
-      if (x >= wreathX && x <= wreathX + canvas.width &&
-          y >= wreathY && y <= wreathY + canvas.height) {
-        dragging = true;
-        offsetX = x - wreathX;
-        offsetY = y - wreathY;
-      }
-    });
-
-    canvas.addEventListener('mousemove', (e) => {
-      if (dragging) {
-        const rect = canvas.getBoundingClientRect();
-        wreathX = e.clientX - rect.left - offsetX;
-        wreathY = e.clientY - rect.top - offsetY;
+  upload.addEventListener('change', (e) => {
+    const reader = new FileReader();
+    reader.onload = function(event) {
+      const img = new Image();
+      img.onload = function() {
+        pfpImage = img;
         drawCanvas();
-      }
-    });
+      };
+      img.src = event.target.result;
+    };
+    reader.readAsDataURL(e.target.files[0]);
+  });
 
-    canvas.addEventListener('mouseup', () => dragging = false);
-    canvas.addEventListener('mouseleave', () => dragging = false);
-
-    function downloadImage() {
-      const link = document.createElement('a');
-      link.download = 'chonkus_pfp.png';
-      link.href = canvas.toDataURL();
-      link.click();
-    }
-  </script>
-
+  canvas.addEventListener('mousedown', (e) => {
+    const rect = canvas.getBoundingClientRect();
+    const x = e.clientX - rect.left;
+    cons
 
 </body>
 </html>
