--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ body {
   width: 100%;
   max-width: 1000px;
   box-shadow: 0 0 20px rgba(0,0,0,0.2);
-  background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/a/ad/Greek_Key.svg/512px-Greek_Key.svg.png');
+  background-image: url('https://raw.githubusercontent.com/Crowbar0/Chonkus/main/New Chonkus Banner.jpg');
   background-repeat: repeat-x;
   background-size: 20px auto;
   background-position: bottom center;
