--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 body {
   margin: 0;
   font-family: Arial, sans-serif;
-  background: url(''https://raw.githubusercontent.com/Crowbar0/Chonkus/main/New Chonkus Banner.jpg') repeat fixed;
+  background: url('https://raw.githubusercontent.com/Crowbar0/Chonkus/main/New Chonkus Banner.jpg') repeat fixed;
   background-size: 300px;
   color: var(--blue-primary);
   display: flex;
