--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ body {
   margin: 0;
   font-family: Arial, sans-serif;
   background: url('https://raw.githubusercontent.com/Crowbar0/Chonkus/main/New%20Chonkus%20Banner.jpg');
-  background-size: 300px;
+  background-size: cover;
   color: var(--blue-primary);
   display: flex;
   justify-content: center;
