--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 body {
   margin: 0;
   font-family: Arial, sans-serif;
-  background: url('https://raw.githubusercontent.com/Crowbar0/Chonkus/main/New%20Chonkus%20Banner.jpg');
+  background: url('https://raw.githubusercontent.com/Crowbar0/Chonkus/main/New%20Chonkus%20Banner.jpg') no-repeat center center fixed;
   background-size: cover;
   color: var(--blue-primary);
   display: flex;
