--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ footer {
     <button onclick="showTab('youtube')">🎬 YouTube</button>
   </div>
 
-  <div id="intro" class="tab-content active">
+ <div id="intro" class="tab-content active" style="font-size: 1.5rem; line-height: 1.9; color: #111;">
     <h2>🏛️ Welcome</h2>
    ><strong>Behold:</strong> <em>Chonkus Maximus</em> — legendary street cat, sunbather, tavern inspector, and undisputed Lord of the Laneways of Crete. The only cat with a Google Maps landmark to his name, complete with 5 star reviews! With paws like pita bread and a belly that echoes through the mountains, Chonkus has achieved local fame and global meme status — all without leaving his patch of cobblestone real estate.</p>
 <p>He's not just fat. He's an <strong>institution</strong>. Rumor has it he once slept through an earthquake, meowed at a ghost, and demanded a fish from a priest — and got it. Now, his fan club is growing faster than his waistline. Welcome to the hub of all things Chonkus 🐈‍⬛🇬🇷</p>
