--- a/index.html
+++ b/index.html
@@ -116,6 +116,33 @@ footer {
   <header>
     <h1><span class="flag">🇬🇷</span> Chonkus Maximus Community <span class="flag">🇬🇷</span></h1>
   </header>
+  
+    <section class="link-grid" style="display: flex; flex-wrap: wrap; justify-content: center; gap: 10px; margin: 20px 0;">
+    <a class="button" href="https://t.me/+TixMgybLw7g0Yzhh">
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/telegram.svg" alt="Telegram" class="icon" style="width: 20px; height: 20px; vertical-align: middle; margin-right: 8px;" />
+      Telegram community
+    </a>
+    <a class="button" href="https://x.com/i/communities/1943379266932285826">
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/x.svg" alt="X" class="icon" style="width: 20px; height: 20px; vertical-align: middle; margin-right: 8px;" />
+      X Community
+    </a>
+    <a class="button" href="https://www.mobyscreener.com/solana/CdNWibyKcLUJKvzj41zWtnRsWPiWexbgConijXaUbonk">
+      <img src="https://raw.githubusercontent.com/UncleBazzy/Chonkus-Site/main/images/dex-icon.jpg" alt="Dexscreener" class="icon" style="width: 20px; height: 20px; vertical-align: middle; margin-right: 8px;" />
+      Mobyscreener *BUY $CHONKUS!*
+    </a>
+    <a class="button" href="https://www.tiktok.com/discover/chonkusmaximus">
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/tiktok.svg" alt="TikTok" class="icon" style="width: 20px; height: 20px; vertical-align: middle; margin-right: 8px;" />
+      TikTok (10m views & counting!)
+    </a>
+    <a class="button" href="https://maps.app.goo.gl/MJu6XRUe7XReyPQ88">
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/googlemaps.svg" alt="Google Maps" class="icon" style="width: 20px; height: 20px; vertical-align: middle; margin-right: 8px;" />
+      View Location (on Google Maps)
+    </a>
+    <a class="button" href="https://www.coingecko.com/en/coins/chonkus-maximus" target="_blank" rel="noopener noreferrer">
+      <img src="https://raw.githubusercontent.com/Crowbar0/Chonkus/main/CoinGecko.png" alt="CoinGecko" class="icon" style="width: 20px; height: 20px; vertical-align: middle; margin-right: 8px;" />
+      View on CoinGecko
+    </a>
+  </section>
 
   <div class="tab-buttons">
     <button onclick="showTab('intro')">🏛️ Intro</button>
