--- a/index.html
+++ b/index.html
@@ -62,6 +62,17 @@ p, li {
   font-size: 2rem;
   animation: float 3s ease-in-out infinite;
 }
+  .scrolling-wrapper {
+  display: inline-block;
+  white-space: nowrap;
+  animation: scroll 30s linear infinite;
+}
+
+@keyframes scroll {
+  0% { transform: translateX(100%); }
+  100% { transform: translateX(-100%); }
+}
+
 
 @keyframes float {
   0%, 100% { transform: translateY(0); }
