--- a/index.html
+++ b/index.html
@@ -1,6 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Chonkus Maximus PFP Editor</title>
+  <link href="https://fonts.googleapis.com/css2?family=Chewy&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Chewy', cursive;
+      text-align: center;
+      background-color: #f0f8ff;
+    }
+    #canvas {
+      border: 4px dashed #007BFF;
+      border-radius: 12px;
+      margin-top: 20px;
+      max-width: 90vw;
+    }
+    .custom-file-upload {
+      display: inline-block;
+      padding: 12px 20px;
+      font-size: 18px;
+      font-weight: bold;
+      color: #fff;
+      background-color: #4CAF50;
+      border-radius: 8px;
+      cursor: pointer;
+      border: none;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+      transition: background-color 0.3s ease, transform 0.2s ease;
+      margin-top: 20px;
+    }
+    .custom-file-upload:hover {
+      background-color: #45a049;
+      transform: scale(1.03);
+    }
+    input[type="file"] {
+      display: none;
+    }
+  </style>
+
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Chonkus Maximus Community</title>
@@ -133,7 +172,7 @@ footer {
   box-shadow: 0 0 12px rgba(0,0,0,0.1);
   margin-bottom: 30px;
 }
-
+  
 </style>
 </head>
 <body>
@@ -310,58 +349,141 @@ function showTab(tabId) {
 }
 
 // PFP Script
-const canvas = document.getElementById('canvas');
-const ctx = canvas.getContext('2d');
-const upload = document.getElementById('upload');
-const wreath = new Image();
-wreath.src = 'https://raw.githubusercontent.com/Crowbar0/Chonkus/main/Wreath.png';
-let pfpImage = null;
-let wreathX = 50, wreathY = 0, wreathWidth = 400, wreathHeight = 150;
-let dragging = false, offsetX = 0, offsetY = 0;
-function drawCanvas() {
-  ctx.clearRect(0, 0, canvas.width, canvas.height);
-  if (pfpImage) ctx.drawImage(pfpImage, 0, 0, canvas.width, canvas.height);
-  ctx.drawImage(wreath, wreathX, wreathY, wreathWidth, wreathHeight);
-}
-upload.addEventListener('change', (e) => {
-  const reader = new FileReader();
-  reader.onload = function (event) {
-    const img = new Image();
-    img.onload = function () {
-      pfpImage = img;
-      drawCanvas();
-    };
-    img.src = event.target.result;
-  };
-  reader.readAsDataURL(e.target.files[0]);
+    const canvas = document.getElementById('canvas');
+    const ctx = canvas.getContext('2d');
+    const upload = document.getElementById('upload');
+
+    let pfpImage = null;
+    let wreath = new Image();
+    wreath.src = 'https://raw.githubusercontent.com/Crowbar0/Chonkus/main/Wreath.png';
+    
+    let draggingWreath = false;
+    let wreathX = 50, wreathY = 50, wreathWidth = 400, wreathHeight = 400;
+    let offsetX = 0, offsetY = 0;
+
+    upload.addEventListener('change', (e) => {
+      const reader = new FileReader();
+      reader.onload = function (event) {
+        const img = new Image();
+        img.onload = function () {
+          pfpImage = img;
+          drawCanvas();
+        };
+        img.src = event.target.result;
+      };
+      reader.readAsDataURL(e.target.files[0]);
+    });
+
+    function drawCanvas() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      if (pfpImage) {
+        ctx.drawImage(pfpImage, 0, 0, canvas.width, canvas.height);
+      }
+      ctx.drawImage(wreath, wreathX, wreathY, wreathWidth, wreathHeight);
+    }
+
+    canvas.addEventListener('mousedown', (e) => {
+      const rect = canvas.getBoundingClientRect();
+      const x = e.clientX - rect.left;
+      const y = e.clientY - rect.top;
+
+      if (
+        x >= wreathX && x <= wreathX + wreathWidth &&
+        y >= wreathY && y <= wreathY + wreathHeight
+      ) {
+        draggingWreath = true;
+        offsetX = x - wreathX;
+        offsetY = y - wreathY;
+      }
+    });
+
+    canvas.addEventListener('mousemove', (e) => {
+      if (draggingWreath) {
+        const rect = canvas.getBoundingClientRect();
+        wreathX = e.clientX - rect.left - offsetX;
+        wreathY = e.clientY - rect.top - offsetY;
+        drawCanvas();
+      }
+    });
+
+    canvas.addEventListener('mouseup', () => { draggingWreath = false; });
+    canvas.addEventListener('mouseleave', () => { draggingWreath = false; });
+
+    function downloadImage() {
+      const link = document.createElement('a');
+      link.download = 'chonkus_pfp.png';
+      link.href = canvas.toDataURL();
+      link.click();
+    }
+
+    wreath.onload = drawCanvas;
+  // Add zoom and crop controls
+let scale = 1;
+let imgX = 0;
+let imgY = 0;
+let isDraggingImg = false;
+let startX = 0;
+let startY = 0;
+
+canvas.addEventListener('wheel', (e) => {
+  e.preventDefault();
+  const delta = e.deltaY > 0 ? -0.1 : 0.1;
+  scale = Math.max(0.5, Math.min(3, scale + delta));
+  drawCanvas();
 });
+
 canvas.addEventListener('mousedown', (e) => {
   const rect = canvas.getBoundingClientRect();
   const x = e.clientX - rect.left;
   const y = e.clientY - rect.top;
+
+  // Check if user clicked on wreath area first
   if (x >= wreathX && x <= wreathX + wreathWidth && y >= wreathY && y <= wreathY + wreathHeight) {
     dragging = true;
     offsetX = x - wreathX;
     offsetY = y - wreathY;
+  } else {
+    isDraggingImg = true;
+    startX = x - imgX;
+    startY = y - imgY;
   }
 });
+
 canvas.addEventListener('mousemove', (e) => {
+  const rect = canvas.getBoundingClientRect();
+  const x = e.clientX - rect.left;
+  const y = e.clientY - rect.top;
+
   if (dragging) {
-    const rect = canvas.getBoundingClientRect();
-    wreathX = e.clientX - rect.left - offsetX;
-    wreathY = e.clientY - rect.top - offsetY;
+    wreathX = x - offsetX;
+    wreathY = y - offsetY;
+    drawCanvas();
+  } else if (isDraggingImg) {
+    imgX = x - startX;
+    imgY = y - startY;
     drawCanvas();
   }
 });
-canvas.addEventListener('mouseup', () => { dragging = false; });
-canvas.addEventListener('mouseleave', () => { dragging = false; });
-function downloadImage() {
-  const link = document.createElement('a');
-  link.download = 'chonkus_pfp.png';
-  link.href = canvas.toDataURL();
-  link.click();
+
+canvas.addEventListener('mouseup', () => {
+  dragging = false;
+  isDraggingImg = false;
+});
+
+canvas.addEventListener('mouseleave', () => {
+  dragging = false;
+  isDraggingImg = false;
+});
+
+function drawCanvas() {
+  ctx.clearRect(0, 0, canvas.width, canvas.height);
+  if (pfpImage) {
+    const scaledWidth = canvas.width * scale;
+    const scaledHeight = canvas.height * scale;
+    ctx.drawImage(pfpImage, imgX, imgY, scaledWidth, scaledHeight);
+  }
+  ctx.drawImage(wreath, wreathX, wreathY, wreathWidth, wreathHeight);
 }
-wreath.onload = () => { drawCanvas(); };
 // Gallery script
 const galleryImages = document.getElementById("galleryImages");
 let index = 0;
